cabal-version:      2.4
name:               sweaty-tictactoe
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hayden LeBaron
maintainer:         hlebaron98@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md


library
  hs-source-dirs:      src
  exposed-modules:     TTTLib

  ghc-options:         -Wall -fno-warn-type-defaults
  default-language:    Haskell2010
  build-depends:       base ^>=4.14.3.0, matrix ^>=0.3.6.1, vector ^>=0.12.3.1


executable sweaty-client
    main-is:          client/Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.14.3.0, matrix ^>=0.3.6.1, sweaty-tictactoe, http-conduit ^>=2.3.8, bytestring ^>=0.10.12.0

    -- hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:          OverloadedStrings
