cabal-version:      2.4
name:               sweaty-tictactoe
version:            0.2.0.0
synopsis:           A simple tic-tac-toe client with a game-history web server
description:        See README.md
homepage:           https://github.com/HaydenLeBaron/sweaty-tictactoe
bug-reports:        https://github.com/HaydenLeBaron/sweaty-tictactoe
license-file:       LICENSE
author:             Hayden LeBaron
maintainer:         hlebaron98@gmail.com
copyright:          2022 Hayden LeBaron
extra-source-files: README.md 


library
  hs-source-dirs:      client-src, server-src
  exposed-modules:     TTTLib, ScoreServerLib, ScoreServerHTML, ScoreServerTypes

  ghc-options:         -Wall -fno-warn-type-defaults
  build-depends:       base ^>=4.14.3.0, matrix ^>=0.3.6.1, vector ^>=0.12.3.1, scotty, text, containers, time, http-types, stm, lucid
  default-language: Haskell2010

executable sweaty-client
  main-is:          client/Main.hs

  build-depends: base ^>=4.14.3.0, matrix ^>=0.3.6.1, sweaty-tictactoe, http-conduit ^>=2.3.8, bytestring ^>=0.10.12.0
  other-modules:         TTTConfig
  default-language: Haskell2010
  default-extensions:          OverloadedStrings

executable sweaty-server
  main-is:             server/Main.hs
  default-language:    Haskell2010
  ghc-options: -Wall -optl-pthread -fPIC -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5 ,stm ^>=2.5.0.1, scotty, sweaty-tictactoe
  other-modules:         TTTConfig